--- a/http/pom.xml
+++ b/http/pom.xml
@@ -26,6 +26,7 @@
         <apacheAsyncClientVersion>4.1.5</apacheAsyncClientVersion>
         <jettyVersion>9.4.51.v20230217</jettyVersion>
         <httpMimeVersion>4.5.14</httpMimeVersion>
+        <apacheHttpCoreVersion>4.4.15</apacheHttpCoreVersion>
 
         <formatterConfigPath>../formatter.xml</formatterConfigPath>
     </properties>
