--- a/http/pom.xml
+++ b/http/pom.xml
@@ -21,8 +21,8 @@
 
         <javax.servlet.api.version>3.1.0</javax.servlet.api.version>
 
-        <grizzly.version>2.3.36-MULE-026-SNAPSHOT</grizzly.version>
-        <grizzly.ahc.version>1.14-MULE-024-SNAPSHOT</grizzly.ahc.version>
+        <grizzly.version>2.3.36-MULE-025</grizzly.version>
+        <grizzly.ahc.version>1.14-MULE-023</grizzly.ahc.version>
         <apacheAsyncClientVersion>4.1.5</apacheAsyncClientVersion>
         <jettyVersion>9.4.51.v20230217</jettyVersion>
         <httpMimeVersion>4.5.14</httpMimeVersion>
