Move cors test to another module to avoid runner config conflicts

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <module>tracing</module>
         <module>metrics</module>
         <module>http</module>
+        <module>cors</module>
     </modules>
 
     <properties>
