--- a/pom.xml
+++ b/pom.xml
@@ -33,37 +33,48 @@
     <module>metrics</module>
   </modules>
 
-  <properties>
-    <munitVersion>2.4.0-SNAPSHOT</munitVersion>
-    <muleExtensionTestSoapTestVersion>1.6.0-SNAPSHOT</muleExtensionTestSoapTestVersion>
-    <muleSpringModuleTestVersion>1.4.0-SNAPSHOT</muleSpringModuleTestVersion>
+    <properties>
+        <munitVersion>2.4.0-SNAPSHOT</munitVersion>
+        <muleExtensionTestSoapTestVersion>1.6.0-SNAPSHOT</muleExtensionTestSoapTestVersion>
+        <muleSpringModuleTestVersion>1.4.0-SNAPSHOT</muleSpringModuleTestVersion>
 
-    <munitExtensionsMavenPlugin>1.1.3</munitExtensionsMavenPlugin>
+        <munitExtensionsMavenPlugin>1.1.3</munitExtensionsMavenPlugin>
 
-    <apacheHttpClientVersion>4.5.13</apacheHttpClientVersion>
-    <springVersion>5.1.6.RELEASE</springVersion>
-    <jacksonVersion>2.15.0</jacksonVersion>
-    <wireMockVersion>1.58</wireMockVersion>
+        <apacheHttpClientVersion>4.5.13</apacheHttpClientVersion>
+        <springVersion>5.1.6.RELEASE</springVersion>
+        <jacksonVersion>2.15.0</jacksonVersion>
+        <wireMockVersion>1.58</wireMockVersion>
 
-    <muleDependenciesVersion>1.x-SNAPSHOT</muleDependenciesVersion>
-    <muleTestComponentsVersion>4.6.0-SNAPSHOT</muleTestComponentsVersion>
+        <muleDependenciesVersion>1.x-SNAPSHOT</muleDependenciesVersion>
+        <muleTestComponentsVersion>4.6.0-SNAPSHOT</muleTestComponentsVersion>
 
         <protobufVersion>3.21.9</protobufVersion>
         <openTelemetryProtoVersion>0.3.0</openTelemetryProtoVersion>
         <opentelemetryVersion>1.20.1</opentelemetryVersion>
-  </properties>
+    </properties>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-site-plugin</artifactId>
-        <configuration>
-          <skip>true</skip>
-          <skipDeploy>true</skipDeploy>
-        </configuration>
-      </plugin>
-    </plugins>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                    <skipDeploy>true</skipDeploy>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>properties</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
 
     <pluginManagement>
       <plugins>
