W-14038887: Refactor test-runner classlaoder creation to make it consistent with the standalone container
* Use versions from test dependencies bom

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,10 @@
 
     <muleDependenciesVersion>1.x-SNAPSHOT</muleDependenciesVersion>
     <muleTestComponentsVersion>4.6.0-SNAPSHOT</muleTestComponentsVersion>
+
+        <protobufVersion>3.21.9</protobufVersion>
+        <openTelemetryProtoVersion>0.3.0</openTelemetryProtoVersion>
+        <opentelemetryVersion>1.20.1</opentelemetryVersion>
   </properties>
 
   <build>
