W-13072016: Review JDKs used for building + running tests in Jenkins
* Addendum

--- a/extensions-xml-support/pom.xml
+++ b/extensions-xml-support/pom.xml
@@ -15,6 +15,10 @@
     </description>
 
     <properties>
+        <surefire.args>
+            ${surefire.test.unit.open.args}
+        </surefire.args>
+
         <javaModuleName>org.mule.test.integration.extensions.xml.support </javaModuleName>
         <javaxJmsApiVersion>2.0.1</javaxJmsApiVersion>
 
