--- a/dsl/pom.xml
+++ b/dsl/pom.xml
@@ -15,6 +15,10 @@
     <name>Mule Extensions DSL Integration Tests</name>
 
     <properties>
+        <surefire.args>
+            ${surefire.test.unit.open.args}
+        </surefire.args>
+
         <javaxJmsApiVersion>2.0.1</javaxJmsApiVersion>
         <jsonassert.version>1.5.2</jsonassert.version>
         <guice.version>5.0.1</guice.version>
