--- a/extensions-mule-support/pom.xml
+++ b/extensions-mule-support/pom.xml
@@ -12,6 +12,10 @@
     <name>Mule SDK Extensions Support Integration Tests</name>
 
     <properties>
+        <surefire.args>
+            ${surefire.test.unit.open.args}
+        </surefire.args>
+
         <javaModuleName>org.mule.test.integration.extensions.mule.support </javaModuleName>
         <formatterConfigPath>../formatter.xml</formatterConfigPath>
     </properties>
