--- a/munit-tests/pom.xml
+++ b/munit-tests/pom.xml
@@ -13,6 +13,11 @@
     <name>MUnit Integration Tests</name>
 
     <properties>
+        <surefire.args>
+            -Xmx1024m -Xms256m -XX:+HeapDumpOnOutOfMemoryError
+            ${surefire.test.unit.open.args}
+        </surefire.args>
+
         <javaModuleName>org.mule.test.integration.munit</javaModuleName>
         <formatterConfigPath>../formatter.xml</formatterConfigPath>
     </properties>
