W-13829740: Change classloader creation to use module layers - TestRunner
* Put slf4j in module path

--- a/metrics/pom.xml
+++ b/metrics/pom.xml
@@ -15,7 +15,7 @@
     <properties>
         <surefire.args>
             -Xmx1024m -Xms256m -XX:+HeapDumpOnOutOfMemoryError
-            ${surefire.test.unit.open.args}
+            ${surefire.slf4j.module.args}
         </surefire.args>
 
         <javaModuleName>org.mule.test.integration.metrics</javaModuleName>
