--- a/security/pom.xml
+++ b/security/pom.xml
@@ -16,7 +16,7 @@
 
     <properties>
         <surefire.args>
-            ${surefire.test.unit.open.args}
+            ${surefire.slf4j.module.args}
         </surefire.args>
 
         <springSecurityVersion>5.1.0.RELEASE</springSecurityVersion>
