--- a/extensions-mule-support/pom.xml
+++ b/extensions-mule-support/pom.xml
@@ -13,7 +13,7 @@
 
     <properties>
         <surefire.args>
-            ${surefire.test.unit.open.args}
+            ${surefire.slf4j.module.args}
         </surefire.args>
 
         <javaModuleName>org.mule.test.integration.extensions.mule.support </javaModuleName>
