--- a/http/pom.xml
+++ b/http/pom.xml
@@ -14,10 +14,14 @@
     <packaging>jar</packaging>
 
     <properties>
+        <surefire.args>
+            -XX:+IgnoreUnrecognizedVMOptions
+            ${surefire.slf4j.module.args}
+        </surefire.args>
+
         <javaModuleName>org.mule.test.integration.mule.http.connector.tests</javaModuleName>
 
         <junit.version>4.13.2</junit.version>
-        <jaxb.runtime.version>4.0.2</jaxb.runtime.version>
 
         <javax.servlet.api.version>3.1.0</javax.servlet.api.version>
 
